--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "run": "node ./index.js"
+    "run": "node ./index.js",
+    "test:watch": "jest --watch"
   },
   "author": "",
   "license": "ISC",
